fix 5ba64587 for dark mode: add text color

--- a/edit/edit.css
+++ b/edit/edit.css
@@ -270,6 +270,7 @@ i,
 .dirty #save-button + button {
   background: linear-gradient(gold, orange);
   border-color: darkgoldenrod;
+  color: #000;
 }
 #publish > div > * {
   margin-top: .75em;
